H6 deep audit exact projection invariants